# ai-disclaimer-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/ai_disclaimer_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_ai_disclaimer_check.py
